ci: use dynamic %kernel.project_dir% path insteal of /app

--- a/config/services/test/services.yaml
+++ b/config/services/test/services.yaml
@@ -8,10 +8,10 @@ services:
         arguments:
             $configurationFilename: '%sylar_config_filename%'
             $mountedConfigurationPath: '/opt/sylar/tests/Core/ServiceCloneService/data'
-            $containerConfigurationPath: '/app/tests/Core/ServiceCloneService/data'
+            $containerConfigurationPath: '/%kernel.project_dir%/tests/Core/ServiceCloneService/data'
 
     App\Core\ServiceCloner\Reservation\ReservationRepositoryInterface:
         class: App\Core\ServiceCloner\Reservation\ReservationRepository
         public: true
         arguments:
-            $containerDatabasePath: '/app/data/database'
+            $containerDatabasePath: '/%kernel.project_dir%/data/database'
