--- a/.github/workflows/symfony.yaml
+++ b/.github/workflows/symfony.yaml
@@ -51,4 +51,4 @@ jobs:
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
-        run: vendor/bin/phpunit --exclude-group zfs-required,mercure,integration
+        run: vendor/bin/phpunit --configuration phpunit.xml.dist --exclude-group zfs-required,mercure,integration
