--- a/.github/workflows/symfony.yaml
+++ b/.github/workflows/symfony.yaml
@@ -19,8 +19,13 @@ jobs:
       # uses: shivammathur/setup-php@v2
       - uses: shivammathur/setup-php@2cb9b829437ee246e9b3cac53555a39208ca6d28
         with:
-          php-version: '8.0'
+          php-version: '8.2'
+          extensions: redis
       - uses: actions/checkout@v4
+      - name: Install missing dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y openssh-client
       - name: Copy .env.test.local
         run: php -r "file_exists('.env.test.local') || copy('.env.test', '.env.test.local');"
       - name: Cache Composer packages
