--- a/.github/workflows/symfony.yaml
+++ b/.github/workflows/symfony.yaml
@@ -52,3 +52,7 @@ jobs:
         env:
           DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
         run: vendor/bin/phpunit --configuration phpunit.xml.dist --exclude-group zfs-required,mercure,integration
+      - name: Execute phpstan
+        run: vendor/bin/phpstan analyse src --level 6
+      - name: Execute php cs-fixer
+        run: vendor/bin/php-cs-fixer fix --verbose --dry-run
