--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/styles": "^4.10.0",
+    "@mui/base": "^5.0.0-beta.68",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
     "@mui/styles": "^5.14.1",
