--- a/src/Infrastructure/Messenger/FailedMessages/Graphql/Type/Query.yaml
+++ b/src/Infrastructure/Messenger/FailedMessages/Graphql/Type/Query.yaml
@@ -5,13 +5,13 @@ QueryFailedMessage:
     fields:
       failedMessages:
         type: "[FailedMessage!]!"
-        resolve: '@=resolver("App\\Infrastructure\\Messenger\\FailedMessages\\Graphql\\Resolver\\MessagesResolver::findAll", [args["max"]])'
+        resolve: '@=query("App\\Infrastructure\\Messenger\\FailedMessages\\Graphql\\Resolver\\MessagesResolver::findAll", args["max"])'
         args:
           max:
             type: Int
       failedMessage:
         type: FailedMessage!
-        resolve: '@=resolver("App\\Infrastructure\\Messenger\\FailedMessages\\Graphql\\Resolver\\MessagesResolver::resolve", [args["id"]])'
+        resolve: '@=query("App\\Infrastructure\\Messenger\\FailedMessages\\Graphql\\Resolver\\MessagesResolver::resolve", args["id"])'
         args:
           id:
             type: Int
