--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "php-http/socket-client": "*",
         "phpseclib/phpseclib": "^3.0",
         "ramsey/uuid": "^4.1",
-        "supervisorphp/supervisor": "^4.0",
+        "supervisorphp/supervisor": "^5.1",
         "symfony/browser-kit": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/doctrine-messenger": "6.4.*",
@@ -55,7 +55,7 @@
         "friendsofphp/php-cs-fixer": "^v3.20.0",
         "jane-php/json-schema": "^7.4",
         "jane-php/open-api-3": "^7.4",
-        "phpstan/phpstan-symfony": "1.3.2",
+        "phpstan/phpstan-symfony": "^1.4",
         "phpunit/phpunit": "^10.2",
         "rector/rector": "*",
         "symfony/phpunit-bridge": "^6.4",
