chore: ensure messages are consumed as www-data

--- a/.docker/runner/etc/supervisor/supervisord.conf
+++ b/.docker/runner/etc/supervisor/supervisord.conf
@@ -44,7 +44,7 @@ autostart=true
 autorestart=unexpected
 startsecs=1
 startretries=3
-user=root
+user=www-data
 
 [include]
 files = /etc/supervisor.d/*.ini
