--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "react-hook-form": "^7.45.4",
     "react-hooks": "^1.0.1",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1",
     "reconnecting-eventsource": "^1.2.0",
     "reconnecting-websocket": "^4.4.0",
     "sirv": "^3.0.0",
@@ -97,7 +97,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "regenerator-runtime": "^0.13.2",
+    "regenerator-runtime": "^0.14.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
