chore: upgrade micoli/ dependencies

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "haydenpierce/class-finder": "*",
         "itspire/monolog-loki": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.19",
-        "micoli/docker-php-api-client": "^3.0",
-        "micoli/elql": "*",
+        "micoli/docker-php-api-client": "^4.1",
+        "micoli/elql": "^0.6.2",
         "mockery/mockery": "^1.4",
         "overblog/graphql-bundle": "^1.7.0",
         "php-http/guzzle7-adapter": "1.0.0",
