--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "ext-redis": "*",
         "brick/varexporter": "*",
         "coduo/php-matcher": "*",
-        "composer/package-versions-deprecated": "1.11.99.1",
+        "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^2.0.1",
         "doctrine/collections": "^1.6",
         "doctrine/doctrine-bundle": "^2.2",
@@ -23,7 +23,7 @@
         "micoli/elql": "^0.7.0",
         "mockery/mockery": "^1.4",
         "overblog/graphql-bundle": "^1.7.0",
-        "php-http/guzzle7-adapter": "1.0.0",
+        "php-http/guzzle7-adapter": "^1.1",
         "php-http/logger-plugin": "^1.2",
         "php-http/socket-client": "*",
         "phpseclib/phpseclib": "^3.0",
@@ -51,7 +51,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^v3.20.0",
+        "friendsofphp/php-cs-fixer": "^3.65",
         "jane-php/json-schema": "^7.4",
         "jane-php/open-api-3": "^7.4",
         "phpstan/phpstan-symfony": "^1.4",
